avoid layout shift with scrollbar y

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -19,5 +19,8 @@
     @apply font-bold;
   }
 }
+body {
+  padding-left: calc(100vw - 100%);
+}
 
 
